--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,27 @@
   box-sizing: border-box;
 }
 
+/*Slideshow*/
+* {
+  box-sizing: border-box
+}
+.image-slideshow {
+max-width: 1000px;
+position: relative;
+margin: auto;
+}
+img {
+width: 100%
+}
+.fade {
+animation-name: fade;
+animation-duration: 2s;
+}
+@keyframes fade {
+from {opacity: .5}
+to {opacity: 1}
+}
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
